lnrpc/routerrpc: add payment addr to SendPaymentRequest
Fixes 4692
